[project]
name = "studylm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "llama-cloud>=2.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
